--- a/css/page.css
+++ b/css/page.css
@@ -1,3 +1,5 @@
+* {padding: 0; margin: 0;}
+html {width: 100%; height: 100%; box-shadow: 130px 30px 180px #000 inset, -130px -30px 180px #000 inset;}
 body{ min-width:800px; padding: 0; margin: 0; background: #000 url('../img/bg.jpg'); font-family: misfits; font-size: 36px; }
 a{ text-decoration: none; color: #5c0209; border:none; }
 a img{ border: none; }
